plumi/skin/browser/stylesheets/plumi.css
/*
** Plumi Global style sheet - plumi.skin.layer based
*/

/***********************/
/* General site layout */
/***********************/

/** Site and wrapper **/

body {
  background-color: #abbd10;
}

#visual-portal-wrapper {
  width: 990px;
  margin: 8px auto;
  background-color: white;
}

#portal-footer {
  margin-top: 0 !important;
  display:none;
}

#portal-searchbox {
   margin-top: 6.5em; 
}

/***************/
/* Left column */

#portal-column-one {
  width: 160px;
}

#portal-column-one .visualPadding,
#portal-column-two .visualPadding {
  padding: 0;
}

dl.portlet,
dd.portletItem,
dd.portletFooter,
dt.portletHeader {
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
  padding-right: 5px;
  padding-left: 5px;
}

dl.portlet {
  margin-top: 0;
  border-style: solid;
  border-width: 1px;
  border-color: #c8dca8;
}

.even {
  background-color: transparent;
}

.portletItem {
  border-bottom: 1px solid #c8dca8;
}

#portal-column-one dl.portlet {
  border-left:none;
  margin-left: 5px;
}


dd.portletFooter {
  background-color: transparent;
  font-style: italic;
}

.portletHeader {
  background: transparent url(++resource++plumi.skin.images/menu.gif) 0 0 repeat-x;
  line-height: 30px;
  display: block;
  height: 30px;
  font-weight: bold;
  text-transform: uppercase;
  padding-right: 0.5em;
  border-bottom: 1px solid #c8dca8;
}

dt.portletHeader,
dt.portletHeader a {
  color: #424242;
}


/** Specific to the two buttons : browse - publish **/

#portlet-publish a,
#portlet-browse a {
  display: block;
  text-align: left;
  text-decoration: none;
  padding: 0.6em 0.5em 0.7em 0;
  margin-left: 10px;

}

#portlet-browse a {
width:177px;
background: transparent url(++resource++plumi.skin.images/browse.png) no-repeat scroll 0 0;
}

#portlet-publish a {
width:177px;
background: transparent url(++resource++plumi.skin.images/publish.png) no-repeat scroll 0 0;
}

#portlet-publish a span,
#portlet-browse a span {

  font-weight: bold;
  font-size: 130%;
  padding: 0.2em 0.5em;
  color: black;
  text-transform: uppercase;
}


/** Right column **/

#portal-column-two {
  border-left: 0px solid #ddd;
  width: 160px;
}

#portal-column-two dl.portlet {
  border-right:none;
  margin-right: 5px;
}


#portal-column-two .portletHeader {
  background: transparent url(++resource++plumi.skin.images/menu.gif) top right repeat-x;
  text-align: left;
  padding-left: 0.5em;
}

.visualIconPadding, .actionMenu .actionMenuContent .visualIconPadding {
  padding-left: 20px;
}

/** Main content zone **/

#content {
  margin: 0em !important;
  padding: 0 ! important;
}

#portal-column-content {
  padding: 0 1em 0 ;
  margin: 0 0 2em;
}

.documentContent {
padding: 0em 0em 1em !important;
}


/***************/
/* Site Header */
/***************/

/** Personal Bar **/

#portal-personaltools {
  border: 0;
  margin: 0pt;
  padding: 0em 3em;
  background-color: transparent;
  position: relative;
  top: 0;
  right: 0;
}

#portal-breadcrumbs {
  padding-bottom: 0.5em;
  border-width: 0;
}


/** Navigation tabs **/

#portal-globalnav {
  padding: 0em;
  background: transparent url(++resource++plumi.skin.images/menu.gif) 0 0 repeat-x;
  height: 30px;
  border-style: solid none;
  border-color: #c8dca8;
  border-width: 1px;
}

#portal-globalnav li.selected,
#portal-globalnav li {
  border-style: none solid none none;
  border-color: white;
  border-width: 1px;
  height: 30px;
  display: block;
  float: left;
  line-height: 30px;
}

#portal-globalnav li.selected a,
#portal-globalnav li a {
  border: 0;
  padding: 0em 1.25em;
  background-color: transparent;
  color: #666666;
  height: auto;
  margin-right: 0.5em;
  text-decoration: none;
  text-transform: capitalize;
}

#portal-globalnav li a:hover {
  border: 0;
  background-color: transparent;
  text-decoration: underline;
}

#portal-globalnav li.selected a { 
  font-weight: bold;
  border: 0;
  background-color: transparent;
}



/**************************/
/* Categories / genres... */

.plumi-props-listing {
  padding: 0;
}

.plumi-props-listing dt {
  color: #414900;
  font-size: 90%;
  padding-bottom: 0.2em;
}

.plumi-props-listing dd {
  margin: 0 0 0 0.5em;
}

.plumi-props-listing ul,
.plumi-props-listing li {
  list-style: none;
  list-image-style: none;
  display: inline;
  margin: 0;
  padding: 0;
}

.plumi-props-listing ul {
  font-size: 80%;
}

.plumi-props-listing ul li {
  margin-right: 0.7em;
}

.plumi-props-listing ul li a:hover {
  color: black;
}

/****************************/
/* Different kind of blocks */

#video-downloads {
  padding-top: 1em;
}

.download-block {
  font-size: 90%;
}

.download-block a {
  background: transparent url(++resource++plumi.skin.images/downloads.png) 0 2px no-repeat;
  padding: 4px 0 4px 19px;
  border: 0 !important;
  text-transform: none;
  font-weight: bold;
}

.download-block a#ogg-link {
  background: transparent url(++resource++plumi.skin.images/ogg_icon.png) 0 2px no-repeat;
}

.download-block a#vlc-link {
  background-image: url(++resource++plumi.skin.images/vlc_icon.gif);
  background-position: 0 0;
  font-size: 90%;
}

#vlc-link span {
  font-weight: normal;
  color: #e16800;
}

.plumi-nice-description {
  font-size: 100%;
  color: black;
  margin: 0.5em 0;
  background: #f4f4f4 url(++resource++plumi.skin.images/homepage_desc.gif) 0 0;
  width: auto;
  padding: 0.5em;
  border: 1px solid #eee;
}

#video-core .link-external {
  padding: 0;
  background-image: none;
}

.link-external,
.link-mailto {
  padding-left: 18p;x
}

.videos-listing .plumi-props-listing dt,
.videos-listing .plumi-props-listing dd {
  display: inline;
}

.videos-listing .plumi-nice-description {
  margin: 1em 160px 0em 0em;
}

.videos-listing .plumi-props-listing {
  padding-top: 1em;
}

.videos-listing .plumi-props-listing {
  border-bottom: 1px dashed #ddd;
  padding-bottom: 0.5em;
}

form div textarea#subject_keywords {
  width: 200px;
  padding: 0px 3px;
  margin: 0 0 0 0;
}
.link-external, .link-mailto {embed
cursor:pointer;
}

#video-infos {
  float:left;
  width:40%;
  font-size:110%;
}

#video-infos thead th {
  font-weight: bold;
}

#full-description {
  clear:left;
}

#video-core {
  float: right;
  padding-top: 0.5em;
  width: 400px;
  clear:right;
  margin-left: 1.9em;
}

#video-about {
  clear: both;
  padding-top: 1em;
}

#no-video-player {
  display: block;
  margin-top: 2em;
  width: 320px;
  text-align: center;
  text-decoration: none;
}

#video-transcoding {
  clear: both;
}


#video-player div {
  padding: 0.4em 0 0.6em 0;
  font-color: #aaa;
  font-size: 85%;
}

#video-player textarea {
  background: #f4f4f4 url(++resource++plumi.skin.images/homepage_desc.gif) 0 0;
  font-size: 90%;
}

#player {
  display: block;
  width: 320px;
  height: 240px;
}

#player-videoview {
display: block;
  width: 400px;
  height: 300px;
}

.embed {

}

#embedDiv {
  margin-top: 10px;
}
#embedCode {
  width:385px;
  height:40px;
  padding:.5em;
  background-color:#F4F4F4;
  overflow-x:auto;  
}

/* - plumi_homepage.css - */

.feature {
    width: 230px;
}

.featured-block {
    clear: both;
    padding: 0.3em 0 !important;
}

.featured-block dd {
    margin-left: 0.3em;
}

.featuredItem {
    clear: both;
    padding: 0.5em;
}

.featured-video-image,
.featured-item-image {
    float: right;
    margin: 1.2em 0.1em;
    padding: 2px;
    border: 1px solid #ccc;
}

.featured-video-duration {
    font-size: 90%;
}

.featured-video-duration span {
    color: #666;
}

.featuredItemDetailsPosted {
    display: block;
}

dt.featuredHeader {
    color: black;
    border-width: 0 0 1px 0;
    border-color: #c8dca8;
    border-style: solid;
    font-size: 120%;
    margin-top: -12px;
    margin-left: 10px;
    margin-right: 10px;
}

.feedButton {
  margin-top: 8px;
}

dt.featuredHeader .featuredItemDetails,
dt.featuredHeader #featuredVideoTitle {
    color: #abbd10;
}

dt.featuredHeader a {
    color: black;
    text-decoration: none;
}

span.featured-read-more {
    text-align: right;
    display: block;
}

a#featured-video-more {
    color: #666;
    border: 0;
    padding-right: 0.2em;
    padding-left: 16px;
    background: transparent url(link_ico.gif) left 50% no-repeat;
}

#featured-item {
    min-height:320px;
    margin-bottom: 1em;
    padding: .3em 0 !important;
}

#featured-item .plumi-props-listing {
    padding-bottom: 0 !important;
    border: 0 !important;
}

.featuredFooter a:visited,
.featuredFooter a {
    background: transparent url(tiny_video_icon.gif) 5px 50% no-repeat;
    color: #444 !important;
    border: 1px solid #ddd !important;
    padding: 0.3em 0.4em 0.3em 22px;
    font-size: 90%;
    background-color: white;
    font-weight: bold;
}

.featuredFooter a:hover {
    background-color: #f2f2f2 !important;
}

.roundborder {
    border-color: #c8dca8;
    border-style: solid;
    border-width:1px;
    padding:.7em .9em;
}

div.reply {
    padding:1em;
}

#portal-colophon .colophonIcon {
    border:0 none;
    display:inline-block;
    height:0 !important;
    margin:0 auto;
    overflow:hidden;
    padding:15px 0 0;
    text-decoration:none;
    vertical-align:top;
    width:80px;
}

#portal-colophon a.colophonIcon {
    cursor:pointer;
}

#portal-colophon ul li {
    display:table-cell;
    font-size:85%;
    margin:0 0.0em;
    padding:0.0em 0.0em;
}

div.RatingViewlet {
    padding-right: 1em;
    margin-left: 1em;
}

dl.portletCalendar{
    width:90% !important;
}

textarea#subject {
    width: 50%;
}

div#video-licensing {
    clear:both;
}

p.documentDescription { 
    color: #444444;
    margin-top:.8em;
}

